welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:3: error: ':' expected but ')' found.
  def colore(c){
              ^Array1:27: error: identifier expected but '}' found.
}            
^